# DSO_visual_front

./: CMakeLists.txt  README.md
data/: camera.txt
include/: PixelGradient.h  PixelSelector.h  Utils.h  geometry.hpp  photometric.hpp
modules/: CMakeLists.txt  demo_ComputeGrident.cpp  demo_PixelPixelProcess.cpp  demo_Undistorter.cpp
src/PixelGradient_src/: CMakeLists.txt  PixelGradient.cpp
src/PixelSelector_src/: CMakeLists.txt  PixelSelector.cpp
src/Undistorter_src/: CMakeLists.txt  geometry.cpp  photometric.cpp
src/Utils/: CMakeLists.txt  Utils.cpp
